Add a JWT-token helper service

--- a/Front/src/app/new-pokedex-entry-form/new-pokedex-entry-form.component.html
+++ b/Front/src/app/new-pokedex-entry-form/new-pokedex-entry-form.component.html
@@ -1,6 +1,17 @@
-<dx-form
-  id="newPokedexEntryForm"
-  [colCount]="3"
-  [formData]="formData"
-  >
-</dx-form>
+  <dx-form
+    id="newPokedexEntryForm"
+    [colCount]="3"
+    [formData]="formData"
+    >
+    <dxi-item
+      >
+      <dx-number-box [(value)]="formData.ID"></dx-number-box>
+    </dxi-item>
+    <dxi-item
+      >
+      <dx-text-box [(value)]="formData.Name"></dx-text-box>
+    </dxi-item>
+    <dxi-item>
+      <dx-button text="Submit" (click)="submit($event)"></dx-button>
+    </dxi-item>
+  </dx-form>
