--- a/Front/src/app/shared/components/login-form/login-form.component.html
+++ b/Front/src/app/shared/components/login-form/login-form.component.html
@@ -2,9 +2,8 @@
   <dx-form [formData]="formData" [disabled]="loading">
 
     <dxi-item dataField="email" editorType="dxTextBox"
-      [editorOptions]="{ stylingMode: 'filled', placeholder: 'Email', mode: 'email' }">
+      [editorOptions]="{ stylingMode: 'filled', placeholder: 'Email', mode: 'text' }">
       <dxi-validation-rule type="required" message="Email is required"></dxi-validation-rule>
-      <dxi-validation-rule type="email" message="Email is invalid"></dxi-validation-rule>
       <dxo-label [visible]="false"></dxo-label>
     </dxi-item>
 
@@ -14,20 +13,9 @@
       <dxo-label [visible]="false"></dxo-label>
     </dxi-item>
 
-    <dxi-item dataField="rememberMe" editorType="dxCheckBox"
-      [editorOptions]="{ text: 'Remember me', elementAttr: { class: 'form-text' } }">
-      <dxo-label [visible]="false"></dxo-label>
-    </dxi-item>
-
     <dxi-item itemType="button">
       <dxo-button-options width="100%" type="default" [useSubmitBehavior]="true" [template]="'signInTemplate'">
       </dxo-button-options>
-    </dxi-item>
-
-    <dxi-item>
-      <div class="link">
-        <a routerLink="/reset-password">Forgot password?</a>
-      </div>
     </dxi-item>
 
     <dxi-item itemType="button">
