--- a/Front/src/app/pokedex-list/pokedex-list.component.scss
+++ b/Front/src/app/pokedex-list/pokedex-list.component.scss
@@ -1,5 +1,9 @@
-:host ::ng-deep .dx-list .dx-list-item {
-  border: 0;
-  width: 25%;
-  float: left;
+@import "../shared/shared";
+
+:host ::ng-deep .dx-list {
+  .dx-list-item {
+    border: 0;
+    width: 20%;
+    float: left;
+  }
 }
