--- a/Front/src/app/new-pokedex-entry-form/new-pokedex-entry-form.component.html
+++ b/Front/src/app/new-pokedex-entry-form/new-pokedex-entry-form.component.html
@@ -1,36 +1,58 @@
-<dx-form
-  id="newPokedexEntryForm"
-  [colCount]="2"
-  [formData]="formData"
-  >
-  <dxi-item
-    >
-    <dx-text-box label="Nazwa Pokemona" [(value)]="formData.Name"></dx-text-box>
-  </dxi-item>
-  <dxi-item
-  >
-    <dx-number-box label="Minimalny Level" [(value)]="formData.MinLVL"></dx-number-box>
-  </dxi-item>
-  <dxi-item
-  >
-    <dx-select-box label="Minimalna jakość Pokeballa" [items]="['Pokeball', 'Great Ball', 'Master Ball']"></dx-select-box>
-  </dxi-item>
-  <dxi-item
-  >
-    <dx-select-box label="Region występowania" [items]="['Unova', 'Johto']"></dx-select-box>
-  </dxi-item>
-  <dxi-item
-  >
-    <dx-select-box label="Typ #1" [items]="['Fire', 'Ice', 'Water', 'Dark', 'Poison', 'Ground', 'Grass', 'Bug', 'Fighting', 'Fairy', 'Ghost']"></dx-select-box>
-  </dxi-item>
-  <dxi-item
-  >
-    <dx-select-box label="Typ #2" [items]="['Fire', 'Ice', 'Water', 'Dark', 'Poison', 'Ground', 'Grass', 'Bug', 'Fighting', 'Fairy', 'Ghost']"></dx-select-box>
-  </dxi-item>
+<img class="background" src="/assets/backgrounds/lab.jpg">
 
+<div class="main-container">
+  <div class="main">
+    <h1 class="title">Dodaj nowy gatunek Pokemona</h1>
+    <div class="form-container">
+      <dx-form
+        id="newPokedexEntryForm"
+        [colCount]="2"
+        [formData]="formData"
+        style="width: 30rem;"
+      >
+        <dxi-item
+          itemType="plain"
+          [colSpan]="2"
+          >
+          <img style="transform: translateX(10rem); width: 10rem; " src="/assets/sprites/pokemon/1.png">
+        </dxi-item>
+        <dxi-item
+          [colSpan]="2"
+          >
+          <dx-text-box label="Nazwa Pokemona" [(value)]="formData.Name"></dx-text-box>
+        </dxi-item>
 
+        <dxi-item
+          [colSpan]="2"
+          >
+          <dx-select-box label="Region występowania" [items]="['Unova', 'Johto']"></dx-select-box>
+        </dxi-item>
 
-  <dxi-item>
-    <dx-button text="Submit" (click)="submit($event)"></dx-button>
-  </dxi-item>
-</dx-form>
+        <dxi-item
+          >
+          <dx-number-box label="Minimalny Level" [(value)]="formData.MinLVL"></dx-number-box>
+        </dxi-item>
+        <dxi-item
+        >
+          <dx-select-box label="Minimalna jakość Pokeballa" [items]="['Pokeball', 'Great Ball', 'Master Ball']"></dx-select-box>
+        </dxi-item>
+
+        <dxi-item
+        >
+          <dx-select-box label="Typ #1" [items]="['Fire', 'Ice', 'Water', 'Dark', 'Poison', 'Ground', 'Grass', 'Bug', 'Fighting', 'Fairy', 'Ghost']"></dx-select-box>
+        </dxi-item>
+        <dxi-item
+        >
+          <dx-select-box label="Typ #2" [items]="['Fire', 'Ice', 'Water', 'Dark', 'Poison', 'Ground', 'Grass', 'Bug', 'Fighting', 'Fairy', 'Ghost']"></dx-select-box>
+        </dxi-item>
+
+        <dxi-item
+          [colSpan]="2"
+        >
+          <dx-button style="width: 100%;" text="Submit" (click)="submit($event)"></dx-button>
+        </dxi-item>
+      </dx-form>
+    </div>
+  </div>
+</div>
+
