--- a/Front/src/app/shared/shared.scss
+++ b/Front/src/app/shared/shared.scss
@@ -22,10 +22,20 @@
   .main {
     background-color: #3d3d48;
     z-index: 1;
-    height: 90%;
+    padding: 1rem;
+    height: calc(100% - 2rem);
     width: 80%;
     box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.2), 0 8px 10px -6px rgb(0 0 0 / 0.2);
     border-radius: 8px;
+
+    .title {
+      font-size: 2rem;
+      font-weight: 500;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      margin-bottom: 1rem;
+    }
   }
 }
 
