--- a/Front/src/app/shared/shared.scss
+++ b/Front/src/app/shared/shared.scss
@@ -36,6 +36,25 @@
       text-align: center;
       margin-bottom: 1rem;
     }
+
+    dx-scroll-view {
+      height: 100%;
+      width: 100%;
+
+
+      ::ng-deep .dx-list {
+        .dx-list-item {
+          border: 0;
+          width: 30%;
+          min-height: 14rem;
+          height: 14rem;
+          max-height: 14rem;
+          overflow: hidden;
+          float: left;
+          margin: 0 0 1rem 1rem;
+        }
+      }
+    }
   }
 }
 
