Change attack list to simple list

--- a/Front/src/app/pokedex-entry/pokedex-entry.component.html
+++ b/Front/src/app/pokedex-entry/pokedex-entry.component.html
@@ -35,7 +35,35 @@
           <div class="entry">
             <div class="label">Ataki</div>
             <div class="value">
-              <dx-select-box [items]="['Quick Attack', 'Chuj', 'XD', 'Ember', 'Lightning']"></dx-select-box>
+              <ul>
+                <li>Leaf Blade</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+                <li>Ember</li>
+              </ul>
             </div>
           </div>
 
