--- a/Front/src/app/pokedex-entry/pokedex-entry.component.scss
+++ b/Front/src/app/pokedex-entry/pokedex-entry.component.scss
@@ -9,10 +9,11 @@
     width: 12rem;
     height: 12rem;
     margin: 6rem;
+    margin-left: 15%;
   }
 
   .info-container {
-    margin-right: 6rem;
+    margin-right: 15%;
     margin-top: 2rem;
     .entry {
       font-size: 1.2rem;
