Fix pokedex list visuals

--- a/Front/src/app/pokedex-list/pokedex-list.component.scss
+++ b/Front/src/app/pokedex-list/pokedex-list.component.scss
@@ -9,6 +9,6 @@
     max-height: 8rem !important;
     overflow: hidden !important;
     float: left !important;
-    margin-top: 0 !important;
+    margin: 0 !important;
   }
 }
