--- a/Front/src/app/shared/shared.scss
+++ b/Front/src/app/shared/shared.scss
@@ -35,6 +35,12 @@
       padding: 0;
       text-align: center;
       margin-bottom: 1rem;
+
+      .modify-button {
+        position: absolute;
+        right: 0;
+        margin: .5rem 1rem;
+      }
     }
 
     dx-scroll-view {
