--- a/Front/src/app/new-pokedex-entry-form/new-pokedex-entry-form.component.html
+++ b/Front/src/app/new-pokedex-entry-form/new-pokedex-entry-form.component.html
@@ -2,7 +2,7 @@
 
 <div class="main-container">
   <div class="main">
-    <h1 class="title">{{formData.ID == -1 ? 'Dodaj nowy gatunek Pokemona' : 'Edytuj dane gatunku'}}</h1>
+    <h1 class="title">{{formData.number == -1 ? 'Dodaj nowy gatunek Pokemona' : 'Edytuj dane gatunku'}}</h1>
     <div class="form-container">
       <dx-form
         id="newPokedexEntryForm"
@@ -11,45 +11,39 @@
         style="width: 30rem;"
       >
         <dxi-item
-          itemType="plain"
           [colSpan]="2"
           >
-          <img style="transform: translateX(10rem); width: 10rem; " src="/assets/sprites/pokemon/1.png">
-        </dxi-item>
-        <dxi-item
-          [colSpan]="2"
-          >
-          <dx-text-box [(value)]="formData.Name" label="Nazwa Pokemona" ></dx-text-box>
+          <dx-text-box [(value)]="formData.name" label="Nazwa Pokemona" ></dx-text-box>
         </dxi-item>
 
         <dxi-item
           [colSpan]="2"
           >
-          <dx-select-box [(value)]="formData.Region" label="Region występowania" [items]="['Unova', 'Johto']"></dx-select-box>
+          <dx-select-box [(value)]="formData.region" label="Region występowania" [items]="['Unova', 'Johto']"></dx-select-box>
         </dxi-item>
 
         <dxi-item
           >
-          <dx-number-box [(value)]="formData.MinimalLevel" label="Minimalny Level" ></dx-number-box>
+          <dx-number-box [(value)]="formData.min_level" label="Minimalny Level" ></dx-number-box>
         </dxi-item>
         <dxi-item
         >
-          <dx-select-box [(value)]="formData.Pokeball" label="Minimalna jakość Pokeballa" [items]="['Pokeball', 'Great Ball', 'Master Ball']"></dx-select-box>
+          <dx-select-box [(value)]="formData.pokeball" label="Minimalna jakość Pokeballa" [items]="['Pokeball', 'Great Ball', 'Master Ball']"></dx-select-box>
         </dxi-item>
 
         <dxi-item
         >
-          <dx-select-box [(value)]="formData.Types[0]" label="Typ #1" [items]="['Fire', 'Ice', 'Water', 'Dark', 'Poison', 'Ground', 'Grass', 'Bug', 'Fighting', 'Fairy', 'Ghost']"></dx-select-box>
+          <dx-select-box [(value)]="formData.primary_type" label="Typ #1" [items]="['Fire', 'Ice', 'Water', 'Dark', 'Poison', 'Ground', 'Grass', 'Bug', 'Fighting', 'Fairy', 'Ghost']"></dx-select-box>
         </dxi-item>
         <dxi-item
         >
-          <dx-select-box [(value)]="formData.Types[0]" label="Typ #2" [items]="['Fire', 'Ice', 'Water', 'Dark', 'Poison', 'Ground', 'Grass', 'Bug', 'Fighting', 'Fairy', 'Ghost']"></dx-select-box>
+          <dx-select-box [(value)]="formData.secondary_type" label="Typ #2" [items]="['Fire', 'Ice', 'Water', 'Dark', 'Poison', 'Ground', 'Grass', 'Bug', 'Fighting', 'Fairy', 'Ghost']"></dx-select-box>
         </dxi-item>
 
         <dxi-item
           [colSpan]="2"
         >
-          <dx-button style="width: 100%;" text="Submit" (click)="submit($event)"></dx-button>
+          <dx-button style="width: 100%;" [text]="formData.number == -1 ? 'Dodaj nowy gatunek' : 'Edytuj gatunek'" (click)="submit($event)"></dx-button>
         </dxi-item>
       </dx-form>
     </div>
