--- a/Front/src/app/pokedex-list/pokedex-list.component.html
+++ b/Front/src/app/pokedex-list/pokedex-list.component.html
@@ -17,7 +17,7 @@
 
 
       <dx-list
-        [dataSource]="pokemonList"
+        [dataSource]="dataSource"
         (onItemClick)="itemClick($event)"
         [searchEnabled]="true"
         searchExpr="name"
@@ -25,13 +25,14 @@
         nextButtonText="Załaduj więcej"
       >
         <div *dxTemplate="let item of 'item'" style="display : flex; flex-direction: column">
-          <img [src]="'/assets/sprites/pokemon/' + item.ID + '.png'" >
+          <img [src]="'/assets/sprites/pokemon/' + item.number + '.png'" >
           <div style="display: flex;">
-            <div style="color: #fff8; margin-right: .2rem"> {{item.ID}} </div>
+            <div style="color: #fff8; margin-right: .2rem"> {{item.number}} </div>
             {{item.name}}
           </div>
           <div style="display: flex; flex-direction: row">
-            <app-type-label *ngFor="let type of item.types" [type]="type"></app-type-label>
+	          <app-type-label [type]="item.primary_type"></app-type-label>
+	          <app-type-label *ngIf="item.secondary_type" [type]="item.secondary_type"></app-type-label>
           </div>
         </div>
       </dx-list>
