--- a/Front/src/app/new-pokedex-entry-form/new-pokedex-entry-form.component.html
+++ b/Front/src/app/new-pokedex-entry-form/new-pokedex-entry-form.component.html
@@ -19,7 +19,7 @@
         <dxi-item
           [colSpan]="2"
           >
-          <dx-select-box [(value)]="formData.region" label="Region występowania" [items]="['Unova', 'Johto']"></dx-select-box>
+          <dx-select-box [(value)]="formData.region" label="Region występowania" [items]="['Unova', 'Johto', 'Sinnoh']"></dx-select-box>
         </dxi-item>
 
         <dxi-item
