--- a/Front/src/app/pokeball-list/pokeball-list.component.html
+++ b/Front/src/app/pokeball-list/pokeball-list.component.html
@@ -3,6 +3,18 @@
 <div class="main-container">
   <div class="main">
     <dx-scroll-view>
+      <h1 class="title">
+        Pokeballe
+        <dx-button
+          *ngIf="user.isProfessor()"
+          (click)="router.navigate(['/pokedex/new'])"
+          class="modify-button"
+          text="Dodaj nowego Pokeballa"
+          icon="add"
+        >
+        </dx-button>
+      </h1>
+
       <dx-list
         [items]="items"
         itemTemplate="item"
