--- a/Front/src/app/pokedex-entry/pokedex-entry.component.html
+++ b/Front/src/app/pokedex-entry/pokedex-entry.component.html
@@ -23,7 +23,7 @@
           </div>
 
           <div class="entry">
-            <div class="label">Numer</div>
+            <div class="label">Numer gatunku</div>
             <div class="value">{{pokedexData.number}}</div>
           </div>
 
@@ -43,7 +43,7 @@
           </div>
 
           <div class="entry">
-            <div class="label">Ataki</div>
+            <div class="label">Możliwe ataki do poznania</div>
             <div class="value">
               <ul>
                 <li *ngFor="let attack of pokedexData.Attacks">{{attack}}</li>
