--- a/Front/src/app/shared/components/user-panel/user-panel.component.html
+++ b/Front/src/app/shared/components/user-panel/user-panel.component.html
@@ -1,5 +1,6 @@
 <div class="user-panel">
   <div class="user-info">
+    <img *ngIf="user?.isProfessor" style="filter: invert()" width="24" height="24" src="../assets/lab.png">
     <div class="user-name">{{user?.name}}</div>
   </div>
   <dx-context-menu
