--- a/Front/src/app/pokedex-entry/pokedex-entry.component.html
+++ b/Front/src/app/pokedex-entry/pokedex-entry.component.html
@@ -46,7 +46,7 @@
             <div class="label">Możliwe ataki do poznania</div>
             <div class="value">
               <ul>
-                <li *ngFor="let attack of pokedexData.Attacks">{{attack}}</li>
+                <app-attack-label *ngFor="let attack of pokedexData.Attacks" [name]="attack"></app-attack-label>
               </ul>
             </div>
           </div>
