--- a/Front/src/app/new/new-pokemon-entry-form/new-pokemon-entry-form.component.scss
+++ b/Front/src/app/new/new-pokemon-entry-form/new-pokemon-entry-form.component.scss
@@ -1,4 +1,4 @@
-@import "../shared/shared";
+@import "../../shared/shared";
 
 .form-container {
   width: 100%;
@@ -6,4 +6,5 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
