--- a/Front/src/app/pokeball-list/pokeball-list.component.html
+++ b/Front/src/app/pokeball-list/pokeball-list.component.html
@@ -7,7 +7,7 @@
         Pokeballe
         <dx-button
           *ngIf="user.isProfessor()"
-          (click)="router.navigate(['/pokedex/new'])"
+          (click)="router.navigate(['/pokedex/pokeball/new'])"
           class="modify-button"
           text="Dodaj nowego Pokeballa"
           icon="add"
@@ -19,9 +19,11 @@
         [items]="items"
         itemTemplate="item"
       >
-        <div *dxTemplate="let item of 'item'" (click)="router.navigate([item.route])">
-          <div style="position: absolute; width: 100%; height: 100%; z-index: 1; filter: blur(4px); background-size: cover; background-position: center;" [style.background-image]="'linear-gradient(#0004, #0004), url(' + item.background + ')'"></div>
-          <h5 style="position: absolute; text-align: center; z-index : 2; width: 100%; top: 50px; font-weight: 600; ">{{item.text}}</h5>
+        <div *dxTemplate="let item of 'item'">
+          <div style="position: absolute; width: 100%; height: 100%; z-index: 1; filter: blur(4px); background-size: cover; background-position: center;" [style.background-image]="'linear-gradient(#0008, #0008), url(\'../../assets/sprites/pokeball/pokeball.webp\')'"></div>
+          <h5 style="position: absolute; text-align: center; z-index : 2; width: 100%; top: 60px; font-weight: 600; ">{{item.name}}</h5>
+          <dx-button *ngIf="user.isProfessor()" style="position: absolute; z-index : 2; width: 80%; top: 140px; left : 50px; border-radius: 4px;" icon="edit" text="Edytuj dane" (click)="router.navigate(['/pokedex/pokeball/' + item.name])"></dx-button>
+          <dx-button *ngIf="user.isProfessor()" style="position: absolute; z-index : 2; width: 80%; top: 180px; left : 50px; border-radius: 4px;" icon="remove" text="Usuń Pokeballa" (click)="router.navigate(['/pokedex/pokeball/new'])"></dx-button>
         </div>
       </dx-list>
     </dx-scroll-view>
