--- a/Front/src/app/new/new-pokemon-entry-form/new-pokemon-entry-form.component.html
+++ b/Front/src/app/new/new-pokemon-entry-form/new-pokemon-entry-form.component.html
@@ -21,7 +21,7 @@
 
       <form (submit)="onFormSubmit($event)">
       <dx-form
-        id="newPokedexEntryForm"
+        id="newPokemonEntryForm"
         [colCount]="2"
         [formData]="formData"
         style="width: 30rem;"
