--- a/Front/src/app/shared/components/login-form/login-form.component.html
+++ b/Front/src/app/shared/components/login-form/login-form.component.html
@@ -1,15 +1,15 @@
 <form class="login-form" (submit)="onSubmit($event)">
   <dx-form [formData]="formData" [disabled]="loading">
 
-    <dxi-item dataField="email" editorType="dxTextBox"
-      [editorOptions]="{ stylingMode: 'filled', placeholder: 'Email', mode: 'text' }">
-      <dxi-validation-rule type="required" message="Email is required"></dxi-validation-rule>
+    <dxi-item dataField="login" editorType="dxTextBox"
+      [editorOptions]="{ stylingMode: 'filled', placeholder: 'Login', mode: 'text' }">
+      <dxi-validation-rule type="required" message="Login jest wymagany"></dxi-validation-rule>
       <dxo-label [visible]="false"></dxo-label>
     </dxi-item>
 
     <dxi-item dataField="password" editorType="dxTextBox"
-      [editorOptions]="{ stylingMode: 'filled', placeholder: 'Password', mode: 'password' }">
-      <dxi-validation-rule type="required" message="Password is required"></dxi-validation-rule>
+      [editorOptions]="{ stylingMode: 'filled', placeholder: 'Hasło', mode: 'password' }">
+      <dxi-validation-rule type="required" message="Hasło jest wymagane"></dxi-validation-rule>
       <dxo-label [visible]="false"></dxo-label>
     </dxi-item>
 
@@ -19,7 +19,7 @@
     </dxi-item>
 
     <dxi-item itemType="button">
-      <dxo-button-options text="Create an account" width="100%" [onClick]="onCreateAccountClick"></dxo-button-options>
+      <dxo-button-options text="Stwórz konto" width="100%" [onClick]="onCreateAccountClick"></dxo-button-options>
     </dxi-item>
 
     <ng-container *dxTemplate="let item of 'signInTemplate'">
@@ -28,7 +28,7 @@
           <ng-container *ngIf="loading; else notLoading">
             <dx-load-indicator width="24px" height="24px" [visible]="true"></dx-load-indicator>
           </ng-container>
-          <ng-template #notLoading>Sign In</ng-template>
+          <ng-template #notLoading>Zaloguj się</ng-template>
         </span>
       </div>
     </ng-container>
