--- a/Front/src/app/shared/components/create-account-form/create-account-form.component.html
+++ b/Front/src/app/shared/components/create-account-form/create-account-form.component.html
@@ -1,31 +1,41 @@
 <form class="create-account-form" (submit)="onSubmit($event)">
   <dx-form [formData]="formData" [disabled]="loading">
 
-    <dxi-item dataField="email" editorType="dxTextBox"
-      [editorOptions]="{ stylingMode: 'filled', placeholder: 'Email', mode: 'email' }">
-      <dxi-validation-rule type="required" message="Email is required"></dxi-validation-rule>
-      <dxi-validation-rule type="email" message="Email is invalid"></dxi-validation-rule>
+    <dxi-item dataField="login" editorType="dxTextBox"
+      [editorOptions]="{ stylingMode: 'filled', placeholder: 'Login' }">
+      <dxi-validation-rule type="required" message="Login jest wymagany"></dxi-validation-rule>
       <dxo-label [visible]="false"></dxo-label>
     </dxi-item>
 
     <dxi-item dataField="password" editorType="dxTextBox"
-      [editorOptions]="{ stylingMode: 'filled', placeholder: 'Password', mode: 'password' }">
-      <dxi-validation-rule type="required" message="Password is required"></dxi-validation-rule>
+      [editorOptions]="{ stylingMode: 'filled', placeholder: 'Hasło', mode: 'password' }">
+      <dxi-validation-rule type="required" message="Hasło jest wymagane"></dxi-validation-rule>
       <dxo-label [visible]="false"></dxo-label>
     </dxi-item>
 
     <dxi-item dataField="confirmedPassword" editorType="dxTextBox"
-      [editorOptions]="{ stylingMode: 'filled', placeholder: 'Confirm Password', mode: 'password' }">
-      <dxi-validation-rule type="required" message="Password is required"></dxi-validation-rule>
-      <dxi-validation-rule type="custom" message="Passwords do not match" [validationCallback]="confirmPassword">
+      [editorOptions]="{ stylingMode: 'filled', placeholder: 'Powtórz hasło', mode: 'password' }">
+      <dxi-validation-rule type="required" message="Hasło jest wymagane"></dxi-validation-rule>
+      <dxi-validation-rule type="custom" message="Hasła nie są takie same" [validationCallback]="confirmPassword">
       </dxi-validation-rule>
       <dxo-label [visible]="false"></dxo-label>
     </dxi-item>
 
+    <dxi-item dataField="username" editorType="dxTextBox"
+      [editorOptions]="{ stylingMode: 'filled', placeholder: 'Imię użytkownika' }">
+      <dxi-validation-rule type="required" message="Imię jest wymagane"></dxi-validation-rule>
+      <dxo-label [visible]="false"></dxo-label>
+    </dxi-item>
+
+    <dxi-item dataField="is_professor" editorType="dxCheckBox"
+      [editorOptions]="{ stylingMode: 'filled' }">
+      <dxo-label text="Profesor?" [visible]="true"></dxo-label>
+    </dxi-item>
+
     <dxi-item>
       <div class='policy-info'>
-        By creating an account, you agree to the <a routerLink="#">Terms of Service</a> and <a routerLink="#">Privacy
-          Policy</a>
+        Tworząc konto, akceptujesz <a routerLink="#">Warunki Usługi</a> i <a routerLink="#">Politykę
+          prywatności</a>
       </div>
     </dxi-item>
 
@@ -36,7 +46,7 @@
 
     <dxi-item>
       <div class="login-link">
-        Have an account? <a routerLink="/login">Sign In</a>
+        Masz już konto? <a routerLink="/login">Zaloguj się</a>
       </div>
     </dxi-item>
 
@@ -47,7 +57,7 @@
             <dx-load-indicator width="24px" height="24px" [visible]="true"></dx-load-indicator>
           </ng-container>
   
-          <ng-template #notLoading>Create a new account</ng-template>
+          <ng-template #notLoading>Stwórz nowe konto</ng-template>
         </span>
       </div>
     </ng-container>
