--- a/Front/src/app/shared/shared.scss
+++ b/Front/src/app/shared/shared.scss
@@ -51,7 +51,7 @@
       ::ng-deep .dx-list {
         .dx-list-item {
           border: 0;
-          width: 30%;
+          width: 20rem;
           min-height: 14rem;
           height: 14rem;
           max-height: 14rem;
