--- a/Front/src/app/arena-entry/arena-entry.component.html
+++ b/Front/src/app/arena-entry/arena-entry.component.html
@@ -2,23 +2,31 @@
 
 <div class="main-container">
   <div class="main">
+    <dx-scroll-view>
     <h1 class="title">
       {{arenaData?.arena}}
       <dx-button
         class="modify-button"
         text="Dodaj nową walkę"
         icon="add"
-        style="margin-right: 12rem"
       >
       </dx-button>
     </h1>
 
-    <div style="display: flex; flex-direction: row; justify-content: space-between">
-      <div style="width: 49%; background-color: #f002; border-radius: 1rem; padding: 2rem">
-        <h3 style="font-size: 2rem">Twoja pozycja:</h3>
-        <h2 style="font-size: 3.2rem; font-weight: 500; display: flex; flex-direction: row">#12 <div style="font-weight: 200; color: #fffa">/29</div></h2>
+    <div style="margin-top: 5rem; display: flex; flex-direction: row; justify-content: space-between">
+      <div class="ranking" style="width: 78%; max-height: 20rem; background-color: #f002; border-radius: 1rem;">
+        <dx-scroll-view>
+        <div style="font-size: 2rem; text-align: center; margin-bottom: .2rem;">Ranking</div>
+        <dx-data-grid
+          [dataSource]="arenaMembers"
+          >
+          <dxi-column caption="Gracz" dataField="usr"></dxi-column>
+          <dxi-column caption="Data dołączenia" dataField="join_date"></dxi-column>
+          <dxi-column caption="Punkty" dataField="score"></dxi-column>
+        </dx-data-grid>
+        </dx-scroll-view>
       </div>
-      <div style="width: 49%; background-color: #0f02; border-radius: 1rem; padding: 2rem">
+      <div style="width: 20%; background-color: #0f02; border-radius: 1rem; padding: 2rem">
         <h3 style="font-size: 2rem">Twoje punkty:</h3>
         <h2 style="font-size: 3.2rem; font-weight: 500; display: flex; flex-direction: row"> {{arenaData?.score}} </h2>
       </div>
@@ -33,6 +41,12 @@
     >
     </dx-data-grid>
 
+    <div style="margin-top: 2rem;">
+      <dx-button *ngIf="askAgain" [width]="250" icon="close" text="Opuść arene" (click)="askAgain = false;"></dx-button>
+      <dx-button *ngIf="!askAgain" [width]="250" icon="check" text="Napewno opuścić?" (click)="leaveArena()"></dx-button>
+    </div>
+    
+    </dx-scroll-view>
   </div>
 </div>
 
