--- a/Front/src/app/arena-list/arena-list.component.html
+++ b/Front/src/app/arena-list/arena-list.component.html
@@ -2,17 +2,18 @@
 
 <div class="main-container">
   <div class="main">
-    <h1 class="title">Moje Areny</h1>
+    <h1 class="title">Areny</h1>
 
     <dx-scroll-view>
       <dx-list
         [items]="items"
         itemTemplate="item"
       >
-        <div *dxTemplate="let item of 'item'" (click)="router.navigate([item.route])">
-          <div style="position: absolute; width: 100%; height: 100%; z-index: 1; filter: blur(4px); background-size: cover; background-position: center;" [style.background-image]="'linear-gradient(#0004, #0004), url(' + item.background + ')'"></div>
-          <h5 style="position: absolute; text-align: center; z-index : 2; width: 100%; top: 50px; font-weight: 600; ">{{item.text}}</h5>
-          <h6 style="position: absolute; text-align: center; z-index : 2; width: 100%; top: 70px; font-weight: 400; ">Punkty: {{item.points}}</h6>
+        <div *dxTemplate="let item of 'item'">
+          <div style="position: absolute; width: 100%; height: 100%; z-index: 1; filter: blur(4px); background-size: cover; background-position: center;" [style.background-image]="'linear-gradient(#0004, #0004), url(../../assets/backgrounds/arena.jpg'"></div>
+          <h5 style="position: absolute; text-align: center; z-index : 2; width: 100%; top: 50px; font-weight: 600; ">{{item.name}}</h5>
+          <dx-button *ngIf="isMemberOf(item.name)" style="position: absolute; z-index: 2; top: 150px; left: 80px;" icon="chevronright" (click)="router.navigate(['/arena/' + getArenaMemberId(item.name)])" text="Przejdź do areny"></dx-button>
+          <dx-button *ngIf="!isMemberOf(item.name)" style="position: absolute; z-index: 2; top: 150px; left: 80px;" icon="add" (click)="joinArena(item.name)" text="Dołącz do areny"></dx-button>
         </div>
       </dx-list>
     </dx-scroll-view>
